--- a/ansible.yaml
+++ b/ansible.yaml
@@ -1,6 +1,8 @@
 ---
 - name: "Build pod with ansible"
   hosts: master
+  become: yes
+  become_user: ansible
   tasks:
   - name: stop running container
     command: kubectl apply -f hexatecdepl.yaml
