--- a/test.yml
+++ b/test.yml
@@ -1,6 +1,6 @@
 ---
 - name: "Build container with ansible"
-  hosts: master
+  hosts: all
   become: yes
   become_method: su
   become_user: ansible
