--- a/test.yml
+++ b/test.yml
@@ -6,5 +6,5 @@
   become_user: ansible
   tasks:
   - name: stop running container
-    command: ansible -m ping master
+    command: ansible -m ping all
     ignore_errors: yes
